# Fll-Project

./: .gitignore  Login.css  Login.tsx  app.py  database.py  run.bat
LoginBackend/: API_SETUP.md  start.bat  start.sh  test_api.bat
LoginBackend/main/: .gitignore  Cargo.toml
LoginBackend/main/src/: db.rs  main.rs
MainApp/: .gitignore  CLEANUP_LOG.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  TAURI_IMPLEMENTATION_DETAILS.md  TAURI_MIGRATION.md  TAURI_QUICK_REFERENCE.md  ai_analyzer.py  artifacts.db  config.py  database.py  email_utils.py  fast_analyzer.py  init_db.py  login.py  model_3d_viewer.py  requirements.txt  run.ps1  run_backup.ps1  setup-ollama.ps1  setup-ollama.sh  start_backend.bat  temp_line.txt  user.yaml
MainApp/backend/: artifacts.db  main.py
MainApp/frontend/: app.py
MainApp/frontend/archeology/: Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json
MainApp/test/: test_pydantic.py  test_update.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/archeology/assets/: tailwind.css
frontend/archeology/src/: main.rs
frontend/src/: App.tsx
frontend/src/components/: ArtifactCard.css  ArtifactCard.tsx  ArtifactModal.css  ArtifactModal.tsx  Layout.css  Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ArtifactGallery.css  ArtifactGallery.tsx  AuditLogs.css  AuditLogs.tsx  ChangePassword.css  ChangePassword.tsx  Dashboard.css  Dashboard.tsx  Login.css  Login.tsx  UploadArtifact.css  UploadArtifact.tsx  (+2 more)
tempData/: defaultAdmin.jsonc
(+5 files in other folders)
